2003-06-23  Cory Dodt <corydodt@yahoo.com>
	* twisted/python/util.py twisted/web/microdom.py 
	twisted/test/test_{util,xml}.py: preserveCase and caseInsensitive
	work on attribute names as well as element names.

2003-06-22  Jp Calderone  <exarkun@twistedmatrix.com>
	* twisted/internet/defer.py: Changed maybeDeferred API from
	maybeDeferred(deferred, f, *args, **kw) to maybeDeferred(f, *args,
	**kw).

2003-06-19  Paul Swartz  <z3p@twistedmatrix.com>
	* twisted/conch/{checkers,credentials,realm}.py, 
	twisted/conch/ssh/userauth.py: Moved the Conch user authentication
	code to use the new version of Cred.

2003-06-19  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.6alpha3. There was a problem in
	twisted.python.compat that was breaking the documentation
	building. It is now fixed.

2003-06-18  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.6alpha2.

2003-06-16  Donovan Preston  <dp@twistedmatrix.com>

	* twisted/web/woven/{controller,view,widgets}.py: Cleaned up the
	output of Woven so it never leaves any woven-specific attributes
	on the output HTML. Also, id attributes are not set on every
	node with a View unless you are using LivePage.

2003-06-11  Brian Warner  <warner@lothar.com>

	* doc/howto/cvs-dev.html: add "Working from CVS" hints

2003-06-10  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/internet/protocol.py: connection refused errors for
	connected datagram protocols (connectUDP) are indicated using
	callback, ConnectedDatagramProtocol.connectionRefused, rather
	than an exception as before.

2003-06-09  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/trial/{unittest,runner}.py: Added setUpClass and
	tearDownClass methods and invocations to twisted.trial. Implement
	those methods in your TestCases if you want to manage resources on
	a per-class level.
 
2003-06-09  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/mail/relay.py: Default relaying rule change from all