@@ -30,6 +30,10 @@ Report results in a machine-readable jelly stream.
 \fB--timing\fR
 Report results with timing information for each test.
 .TP
+\fB--tbformat\fR <format>
+Format to display tracebacks with. Valid values are 'plain' and 'emacs',
+default being 'plain'.
+.TP
 \fB-m\fR, \fB--module\fR <module>
 Module containing test cases.
 .TP
